# QT2

./: .gitignore  BUILD_MODE.md  CMakeLists.txt  CMakePresets.json  README.md  build.bat  build.sh  build_debug.bat  build_release.bat  clean.bat  main.cpp  prompt
3rd/include/: .gitkeep
cmake/: DeployQt.cmake  FindQt.cmake  QtConfig.cmake
resource/images/mainui/: .gitkeep
resource/images/secondui/: .gitkeep
resource/styles/mainui/: mainui.qss
resource/styles/secondui/: secondui.qss
src/dashboard/: CMakeLists.txt
src/dashboard/src/: FileManagerPage.cpp
src/mainui/: CMakeLists.txt
src/mainui/biz/: MainController.cpp
src/mainui/include/: MainController.h  MainWindow.h
src/mainui/resources/: mainui.qrc
src/mainui/resources/styles/: mainui.qss
src/mainui/src/: MainWindow.cpp
src/mainui/ui/: MainWindow.ui
src/pages/dashboard/: CMakeLists.txt
src/pages/dashboard/include/: FileManagerPage.h
src/pages/dashboard/ui/: FileManagerPage.ui
src/pages/settings/: CMakeLists.txt
src/secondui/: CMakeLists.txt
src/secondui/biz/: SecondController.cpp
src/secondui/include/: CalculatorPage.h  SecondController.h  SecondWindow.h
src/secondui/resources/: secondui.qrc
src/secondui/resources/styles/: secondui.qss
src/secondui/src/: CalculatorPage.cpp  SecondWindow.cpp
src/secondui/ui/: SecondWindow.ui
src/settings/: CMakeLists.txt
src/settings/include/: PreferencesPage.h
src/settings/src/: PreferencesPage.cpp
src/settings/ui/: PreferencesPage.ui
tests/: .gitkeep
